# scOps

./: LICENSE  README.Rmd  README.md
Python_version1.0.0/: .gitignore  README.Rmd  README.md  pyproject.toml
Python_version1.0.0/src/scops/: __init__.py
Python_version1.0.0/src/scops/compute/: BOGs.py  OperationalRepresentations.py  Profiles.py  Signatures.py  __init__.py
Python_version1.0.0/src/scops/helper/: Dictionary2Memership.py  FilterBOGs.py  GetRepresentation.py  GetTopOrBottom.py  SplitPandas.py  __init__.py  _gettoporbottom_.py  _panda_in_var_.py
R_version1.0.0/: DESCRIPTION  NAMESPACE  README.Rmd  README.md
R_version1.0.0/R/: computeBOGs.R  computeOperationalRepresentations.R  computeProfiles.R  computeSignatures.R  computeWilcoxDE.R  filter_dge_out.R  remove_zero_pvals.R
R_version1.0.0/inst/doc/: prototkeR-vignette.html  scOps-vignette.R  scOps-vignette.Rmd
R_version1.0.0/man/: computeBOGs.Rd  computeOperationalRepresentations.Rd  computeProfiles.Rd  computeSignatures.Rd  computeWilcoxDE.Rd  filter_dge_out.Rd  remove_zero_pvals.Rd
R_version1.0.0/tests/: testthat.R
R_version1.0.0/tests/testthat/: test-computeOperationalRepresentations.R
R_version1.0.0/vignettes/: prototkeR-vignette.Rmd  scOps-vignette.Rmd
