[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "scops"
version = "1.0.0"
authors = [
  {name = "Carlo Manenti", email = "carlomanenti99@gmail.com" },
]
maintainers = [
    {name = "Carlo Manenti", email = "carlomanenti99@gmail.com"},
]
description = "Package for prototypical Operational Representations "
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "anndata",
    "scanpy",
    "numpy",
    "pandas",
    "scipy",
]

license = {file = "LICENSE"}

[tool.poetry.dependencies]
scOps = { git = "https://github.com/davilavelderrainlab/scOps.git", rev = "Python_version1.0.0" }

[project.urls]
Homepage = "https://gitlab.fht.org/davila/scops"
